[gd_scene load_steps=5 format=3 uid="uid://8nga6jpf4rkt"]

[ext_resource type="Texture2D" uid="uid://ctrnwjsthtioi" path="res://icons/bug_icons/wasp_progart.png" id="1_88wv4"]
[ext_resource type="Script" path="res://world_00.gd" id="1_xsaet"]
[ext_resource type="Texture2D" uid="uid://68qye1o65pmu" path="res://icons/element_icons/illusion_progart.png" id="2_0j1fc"]
[ext_resource type="Texture2D" uid="uid://hjng7mlmvatb" path="res://icons/psych_icons/wrath_progart.png" id="3_q0d7p"]

[node name="world_00" type="Node2D"]
script = ExtResource("1_xsaet")

[node name="main_control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="main_background" type="ColorRect" parent="main_control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="card_ratio" type="AspectRatioContainer" parent="main_control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 0.6
stretch_mode = 1

[node name="border" type="MarginContainer" parent="main_control/card_ratio"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="card_background" type="ColorRect" parent="main_control/card_ratio/border"]
layout_mode = 2
color = Color(0.666667, 0.666667, 0.666667, 1)

[node name="main_icon_ratio" type="AspectRatioContainer" parent="main_control/card_ratio/border"]
layout_mode = 2

[node name="main_icon_padding" type="MarginContainer" parent="main_control/card_ratio/border/main_icon_ratio"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="bug_icon" type="TextureRect" parent="main_control/card_ratio/border/main_icon_ratio/main_icon_padding"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_88wv4")
expand_mode = 3
stretch_mode = 5

[node name="element_icon_border" type="MarginContainer" parent="main_control/card_ratio/border"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="element_border_color" type="ColorRect" parent="main_control/card_ratio/border/element_icon_border"]
layout_mode = 2
color = Color(0.466667, 0.466667, 0.466667, 1)

[node name="element_icon_padding" type="MarginContainer" parent="main_control/card_ratio/border/element_icon_border"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="element_background_color" type="ColorRect" parent="main_control/card_ratio/border/element_icon_border/element_icon_padding"]
layout_mode = 2
color = Color(0.666667, 0.666667, 0.666667, 1)

[node name="element_icon" type="TextureRect" parent="main_control/card_ratio/border/element_icon_border/element_icon_padding"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_0j1fc")
expand_mode = 3
stretch_mode = 5

[node name="psyche_icon_border" type="MarginContainer" parent="main_control/card_ratio/border"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="psych_border_color" type="ColorRect" parent="main_control/card_ratio/border/psyche_icon_border"]
layout_mode = 2
color = Color(0.466667, 0.466667, 0.466667, 1)

[node name="psych_icon_padding" type="MarginContainer" parent="main_control/card_ratio/border/psyche_icon_border"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 3

[node name="psych_background_color" type="ColorRect" parent="main_control/card_ratio/border/psyche_icon_border/psych_icon_padding"]
layout_mode = 2
color = Color(0.666667, 0.666667, 0.666667, 1)

[node name="psyche_icon" type="TextureRect" parent="main_control/card_ratio/border/psyche_icon_border/psych_icon_padding"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_q0d7p")
expand_mode = 3
stretch_mode = 5

[node name="cam_00" type="Camera2D" parent="."]
